--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
                     <h2 class="logo__subtitle">the best homemade Italian food</h2>
                 </div>
                 <div class="main-nav">
+                    <a href="#home">Home</a>
                     <a href="#order">Order</a>
                     <a href="#booking">Booking</a>
                 </div>
@@ -62,6 +63,44 @@
         </div>
     </header>
     <div id="pages">
+        <section class="home" id="home">
+            <div class="wrapper">
+                <div class="first-section">
+                    <div class="tile">
+                        <a href="">
+                            <h3>Order online</h3>
+                        </a>
+                    </div>
+                    <div class="tile">
+                        <a href="">
+                            <h3>Book a table</h3>
+                        </a>
+                    </div>
+                    <div class="open">
+                        <a href="">
+                            <h3>Opening hours</h3>
+                            <h4>Tue-San 12:00-24:00</h4>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="slider-section"></div>
+                <div class="cards">
+                    <img src="images/assets/pizza-4.jpg" alt="">
+                    <img src="images/assets/pizza-5.jpg" alt="">
+                    <img src="images/assets/pizza-6.jpg" alt="">
+                    <img src="images/assets/pizza-7.jpg" alt="">
+                    <img src="images/assets/pizza-8.jpg" alt="">
+                    <img src="images/assets/pizza-9.jpg" alt="">
+
+                </div>
+            </div>
+
+
+
+
+        </section>
+
         <section id="order">
             <div id="product-list" class="product-list container"></div>
         </section>
