Results before add carousel

--- a/src/index.html
+++ b/src/index.html
@@ -66,41 +66,82 @@
         <section class="home" id="home">
             <div class="wrapper">
                 <div class="first-section">
-                    <div class="tile">
-                        <a href="">
+                    <a class="links" href="#order">
+                        <div class="tile1">
                             <h3>Order online</h3>
-                        </a>
-                    </div>
-                    <div class="tile">
-                        <a href="">
+                            <p>Delicous food delivered to your door</p>
+                        </div>
+                    </a>
+                    <a class="links" href="#booking">
+                        <div class="tile2">
                             <h3>Book a table</h3>
-                        </a>
-                    </div>
-                    <div class="open">
-                        <a href="">
-                            <h3>Opening hours</h3>
-                            <h4>Tue-San 12:00-24:00</h4>
+                            <p>Book a table now!</p>
+                        </div>
+                    </a>
+                    <div class="open-hours">
+                        <a href=""></a>
+                        <h3>Opening hours</h3>
+                        <h4>Tue-San 12:00-24:00</h4>
                         </a>
                     </div>
                 </div>
+                <div class="slider-section">
+                    <div class="box-1 active-slide">
+                        <div class="photo">
 
-                <div class="slider-section"></div>
-                <div class="cards">
-                    <img src="images/assets/pizza-4.jpg" alt="">
-                    <img src="images/assets/pizza-5.jpg" alt="">
-                    <img src="images/assets/pizza-6.jpg" alt="">
-                    <img src="images/assets/pizza-7.jpg" alt="">
-                    <img src="images/assets/pizza-8.jpg" alt="">
-                    <img src="images/assets/pizza-9.jpg" alt="">
-
+                        </div>
+                        <div class="description">
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium totam nostrum
+                                officia!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box-2 off-slide">
+                        <div class="photo"></div>
+                        <div class="description">
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium totam nostrum
+                                officia!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box-3 off-slide">
+                        <div class="photo"></div>
+                        <div class="description">
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium totam nostrum
+                                officia!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image">
+                        <img src="images/assets/pizza-4.jpg" alt="">
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
+                    </div>
+                    <div class="image">
+                        <img src="images/assets/pizza-5.jpg" alt="">
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
+                    </div>
+                    <div class="image">
+                        <img src="images/assets/pizza-6.jpg" alt="">
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
+                    </div>
+                    <div class="image">
+                        <img src="images/assets/pizza-7.jpg" alt="">
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
+                    </div>
+                    <div class="image">
+                        <img src="images/assets/pizza-8.jpg" alt="">
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
+                    </div>
+                    <div class="image">
+                        <img src="images/assets/pizza-9.jpg" alt="">
+                        <i class="fas fa-search fa-5x home-icon"></i>
+                    </div>
+                    <a href="https://www.instagram.com/?hl=pl" target="_blank">View more on instagram</a>
                 </div>
             </div>
-
-
-
-
         </section>
-
         <section id="order">
             <div id="product-list" class="product-list container"></div>
         </section>
@@ -108,7 +149,6 @@
             <div class="booking-wrapper container"></div>
         </section>
     </div>
-
     <script id="template-booking-widget" type="text/x-handlebars-template">
         <div class="booking-widget">
             <h2 class="page__title no-spacing">Book a table</h2>
@@ -181,7 +221,6 @@
             </form>
         </div>
     </script>
-
     <script id="template-cart-product" type="text/x-handlebars-template">
         <li>
             <div class="widget-amount">
