Selfcheck homepage delete empty spaces

--- a/src/index.html
+++ b/src/index.html
@@ -83,10 +83,8 @@
                         </div>
                     </a>
                     <div class="open-hours">
-                        <a href=""></a>
                         <h3>Opening hours:</h3>
                         <h4>Tue-San 12:00-24:00</h4>
-                        </a>
                     </div>
                 </div>
                 <div class="slider-section">
@@ -99,7 +97,8 @@
                                         </div>
                                         <div class="description">
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium
-                                                totam nostrum officia!</br>
+                                                totam nostrum officia!
+                                                </br>
                                                 </br>
                                                 <span> - Eva Green</span>
                                             </p>
@@ -111,7 +110,8 @@
                                         <div class="photo"></div>
                                         <div class="description">
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium
-                                                totam nostrum officia!</br>
+                                                totam nostrum officia!
+                                                </br>
                                                 </br>
                                                 <span> - Ela Ela</span>
                                             </p>
@@ -123,14 +123,14 @@
                                         <div class="photo"></div>
                                         <div class="description">
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore qui aperiam velit deserunt iste sequi. Doloremque, temporibus? Blanditiis, eum! Eius dolores deserunt error consequuntur quam laudantium
-                                                totam nostrum officia!</br>
+                                                totam nostrum officia!
+                                                </br>
                                                 </br>
                                                 <span> - Madzia Gessler</span>
                                             </p>
                                         </div>
                                     </div>
                                 </li>
-
                             </ul>
                         </div>
                         <div class="glide__bullets" data-glide-el="controls[nav]">
@@ -139,7 +139,6 @@
                             <button class="glide__bullet" data-glide-dir="=2"></button>
                         </div>
                     </div>
-
                 </div>
                 <div class="gallery">
                     <div class="image">
@@ -164,7 +163,7 @@
                     </div>
                     <div class="image">
                         <img src="images/assets/pizza-9.jpg" alt="">
-                        <i class="fas fa-search fa-5x home-icon"></i>
+                        <i class="fas fa-share-alt fa-5x home-icon"></i>
                     </div>
                     <a href="https://www.instagram.com/?hl=pl" target="_blank">View more on instagram</a>
                 </div>
